
includebitsdir = $(includedir)/bits
includesysdir = $(includedir)/sys

include_HEADERS = \
	__cdefs.h \
	alloca.h \
	assert.h \
	complex.h \
	ctype.h \
	errno.h \
	fcntl.h \
	fenv.h \
	float.h \
	inttypes.h \
	iso646.h \
	libgen.h \
	limits.h \
	locale.h \
	malloc.h \
	math.h \
	setjmp.h \
	signal.h \
	stdbool.h \
	stddef.h \
	stdint.h \
	stdio.h \
	stdlib.h \
	string.h \
	tgmath.h \
	time.h \
	unistd.h \
	wchar.h \
	wctype.h

includebits_HEADERS = \
	bits/libstd_errno.h \
	bits/libstd_fcntl.h \
	bits/libstd_float.h \
	bits/libstd_locale.h \
	bits/libstd_math.h \
	bits/libstd_proto.h \
	bits/libstd_stdio.h \
	bits/libstd_types.h

includesys_HEADERS = \
	sys/time.h \
	sys/types.h \
	sys/stat.h

noinst_HEADERS = \
	__cdefs_build.h \
	__ctype.h \
	__host.h \
	__io.h \
	__libinfo.h \
	__libstd_initfini.h
